start refactore news_item
