# resources/openapi3_0.yaml
@@ -867,73 +867,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/resp.auth.error'
-  /assess/news-item-aggregates-by-group/{group_id}:
-    parameters:
-      - name: group_id
-        in: path
-        required: true
-        schema:
-          type: string
-    get:
-      tags: [assess]
-      summary: get news items of a specific group
-      parameters:
-        - name: search
-          in: query
-          schema:
-            type: string
-        - name: read
-          in: query
-          schema:
-            type: string
-        - name: important
-          in: query
-          schema:
-            type: string
-        - name: relevant
-          in: query
-          schema:
-            type: string
-        - name: in_analyze
-          in: query
-          schema:
-            type: string
-        - name: range
-          in: query
-          schema:
-            type: integer
-        - name: sort
-          in: query
-          schema:
-            type: string
-        - name: offset
-          in: query
-          schema:
-            type: integer
-        - name: limit
-          in: query
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: the news items of the specified group
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  total_count:
-                    type: integer
-                  items:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/news_item_aggregate'
-        '401':
-          description: authorization error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/resp.auth.error'
   /assess/news-item-aggregates:
     get:
       tags: [assess]
@@ -1748,40 +1681,6 @@ paths:
                 type: array
                 items:
                   type: string
-        '401':
-          description: authorization error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/resp.auth.error'
-  /bots/news-item-aggregates-by-group/{group_id}:
-    parameters:
-      - name: group_id
-        in: path
-        required: true
-        schema:
-          type: string
-    get:
-      tags: [bots]
-      summary: get news items aggregate
-      requestBody:
-        # TODO: the `limit` parameter in the request's body should be moved to the query
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                limit:
-                  $ref: '#/components/schemas/date_time'
-      responses:
-        '200':
-          description: the IDs of the OSINT sources
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/news_item_aggregate'
         '401':
           description: authorization error
           content:
