# src/core/core/model/collectors_node.py
@@ -1,27 +1,13 @@
+from typing import Any
 import uuid
-from datetime import datetime
-
-from marshmallow import post_load
-from sqlalchemy import or_, func, orm
+from sqlalchemy import or_
 
 from core.managers.db_manager import db
+from core.model.base_model import BaseModel
 from core.managers.log_manager import logger
-from shared.schema.collectors_node import CollectorsNodeSchema, CollectorsNodePresentationSchema
 
 
-class NewCollectorsNodeSchema(CollectorsNodeSchema):
-    @post_load
-    def make_collectors_node(self, data, **kwargs):
-        return CollectorsNode(
-            id=data["id"],
-            name=data["name"],
-            description=data["description"],
-            api_url=data["api_url"],
-            api_key=data["api_key"],
-        )
-
-
-class CollectorsNode(db.Model):
+class CollectorsNode(BaseModel):
     id = db.Column(db.String(), primary_key=True)
     name = db.Column(db.String(), unique=True, nullable=False)
     description = db.Column(db.String())
@@ -35,13 +21,6 @@ class CollectorsNode(db.Model):
         self.description = description
         self.api_url = api_url
         self.api_key = api_key
-        self.tag = "mdi-animation-outline"
-        self.type = "collector"
-
-    @orm.reconstructor
-    def reconstruct(self):
-        self.tag = "mdi-animation-outline"
-        self.type = "collector"
 
     @classmethod
     def exists_by_api_key(cls, api_key):
@@ -60,11 +39,10 @@ class CollectorsNode(db.Model):
         query = cls.query
 
         if search is not None:
-            search_string = f"%{search.lower()}%"
             query = query.filter(
                 or_(
-                    func.lower(CollectorsNode.name).like(search_string),
-                    func.lower(CollectorsNode.description).like(search_string),
+                    CollectorsNode.name.ilike(f"%{search}%"),
+                    CollectorsNode.description.ilike(f"%{search}%"),
                 )
             )
 
@@ -80,36 +58,23 @@ class CollectorsNode(db.Model):
 
     @classmethod
     def get_json_by_id(cls, id):
-        return CollectorsNodeSchema().dump(cls.get_by_id(id))
+        return cls.get_by_id(id).to_dict()
 
     @classmethod
     def get_all_json(cls, search):
         nodes, count = cls.get(search)
-        node_schema = CollectorsNodePresentationSchema(many=True)
-        items = node_schema.dump(nodes)
-
+        items = [node.to_dict() for node in nodes]
         return {"total_count": count, "items": items}
 
     @classmethod
-    def add_new(cls, node_data):
-        new_node_schema = NewCollectorsNodeSchema()
-        node = new_node_schema.load(node_data)
-        db.session.add(node)
-        db.session.commit()
-        return node
-
-    @classmethod
     def update(cls, node_id, node_data):
-        new_node_schema = NewCollectorsNodeSchema()
-        updated_node = new_node_schema.load(node_data)
         node = cls.query.get(node_id)
-        node = updated_node
-
+        node = cls.from_dict(node_data)
         db.session.commit()
         return node
 
-    @classmethod
-    def delete(cls, node_id):
-        node = cls.query.get(node_id)
-        db.session.delete(node)
-        db.session.commit()
+    def to_dict(self) -> dict[str, Any]:
+        data = super().to_dict()
+        data["tag"] = "mdi-animation-outline"
+        data["type"] = "collector"
+        return data
