# src/core/core/model/publisher_preset.py
@@ -1,27 +1,13 @@
-from marshmallow import post_load, fields
-from sqlalchemy import orm
+from typing import Any
 import uuid
 
 from core.managers.log_manager import logger
 from core.managers.db_manager import db
-from core.model.parameter_value import ParameterValueImportSchema
-
+from core.model.base_model import BaseModel
 from core.model.publishers_node import PublishersNode
-from shared.schema.publisher_preset import (
-    PublisherPresetSchema,
-    PublisherPresetPresentationSchema,
-)
 
 
-class NewPublisherPresetSchema(PublisherPresetSchema):
-    parameter_values = fields.List(fields.Nested(ParameterValueImportSchema))
-
-    @post_load
-    def make(self, data, **kwargs):
-        return PublisherPreset(**data)
-
-
-class PublisherPreset(db.Model):
+class PublisherPreset(BaseModel):
     id = db.Column(db.String(64), primary_key=True)
     name = db.Column(db.String(), nullable=False)
     description = db.Column(db.String())
@@ -35,24 +21,19 @@ class PublisherPreset(db.Model):
 
     def __init__(
         self,
-        id,
         name,
         description,
         publisher_id,
         parameter_values,
         use_for_notifications=False,
+        id=None,
     ):
-        self.id = str(uuid.uuid4())
+        self.id = id or str(uuid.uuid4())
         self.name = name
         self.description = description
         self.publisher_id = publisher_id
         self.parameter_values = parameter_values
         self.use_for_notifications = use_for_notifications
-        self.tag = "mdi-file-star-outline"
-
-    @orm.reconstructor
-    def reconstruct(self):
-        self.tag = "mdi-file-star-outline"
 
     @classmethod
     def find(cls, preset_id):
@@ -83,36 +64,20 @@ class PublisherPreset(db.Model):
     @classmethod
     def get_all_json(cls, search):
         publishers, count = cls.get(search)
-        publisher_schema = PublisherPresetPresentationSchema(many=True)
-        return {"total_count": count, "items": publisher_schema.dump(publishers)}
+        items = [publisher.to_dict() for publisher in publishers]
+        return {"total_count": count, "items": items}
 
     @classmethod
     def get_all_for_publisher_json(cls, parameters):
         node = PublishersNode.get_by_api_key(parameters.api_key)
         for publisher in node.publishers:
             if publisher.type == parameters.publisher_type:
-                presets_schema = PublisherPresetSchema(many=True)
-                return presets_schema.dump(publisher.sources)
-
-    @classmethod
-    def add_new(cls, data):
-        logger.debug(f"Adding new publisher preset: {data}")
-        new_preset_schema = NewPublisherPresetSchema()
-        preset = new_preset_schema.load(data)
-        db.session.add(preset)
-        db.session.commit()
-
-    @classmethod
-    def delete(cls, preset_id):
-        preset = cls.query.get(preset_id)
-        db.session.delete(preset)
-        db.session.commit()
+                return [preset.to_dict() for preset in publisher.sources]
 
     @classmethod
     def update(cls, preset_id, data):
-        new_preset_schema = NewPublisherPresetSchema()
-        updated_preset = new_preset_schema.load(data)
         preset = cls.query.get(preset_id)
+        updated_preset = cls.from_dict(data)
         preset.name = updated_preset.name
         preset.description = updated_preset.description
 
@@ -123,7 +88,13 @@ class PublisherPreset(db.Model):
 
         db.session.commit()
 
+    def to_dict(self) -> dict[str, Any]:
+        data = super().to_dict()
+        data["parameter_values"] = [value.to_dict() for value in self.parameter_values]
+        data["tag"] = "mdi-file-star-outline"
+        return data
 
-class PublisherPresetParameterValue(db.Model):
+
+class PublisherPresetParameterValue(BaseModel):
     publisher_preset_id = db.Column(db.String, db.ForeignKey("publisher_preset.id"), primary_key=True)
     parameter_value_id = db.Column(db.Integer, db.ForeignKey("parameter_value.id"), primary_key=True)
